Añadida situación Alice y Bob para la firma

--- a/src/Curvas elípticas.ipynb
+++ b/src/Curvas elípticas.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6466217458795460239168546665254127222386948803784032710039152625253381618434,\n",
-       " (27501174150858854412187924747415082264060602229435582116045824313236092380309 : 40115898585552385400975026573704901568990540539599444469911269012302469956777 : 1))"
+       "(955420798291222162383239997443926117836422561522270142103612702475525932480,\n",
+       " (5121923852907061438581061465499853009050777329813211467055215122507590041839 : 3409004576848160780621935864572296721639491914975125550113634936524990286987 : 1))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,27 +123,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mensaje1 = \"Demostración de la curva elíptica\"\n",
-    "mensaje2 = \"Demostración de la curva elípticaa\""
+    "Pongamos ahora en práctica el métdodo implementado. Supongamos que Alice desea enviar un mensaje a Bob. Decide firmarlo y enviárselo. (La parte de encriptar el archivo no lo tenemos en cuenta, solo nos interesa la firma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r, s = firmarEC(mensaje1, G, n, dA)"
+    "mensaje = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r, s = firmarEC(mensaje, G, n, dA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suponemos que Bob tras descifrar el mensaje obtiene el siguiente y decide ver si verdaderamente lo ha enviado Alice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -152,18 +165,43 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "verificarFirmaEC(mensaje1, G, n, HA, r, s)"
+    "mensajeDescifrado = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\"\n",
+    "verificarFirmaEC(mensajeDescifrado, G, n, HA, r, s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bob comprueba que efectivamente se lo ha enviado Alice y se organizar para ver al gatito. Alice, se da cuenta de que no han especificado hora y le envía otro mensaje para concretar. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mensaje2 = \"Nos vemos en mi casa a las 14:00\"\n",
+    "r2, s2 = r, s = firmarEC(mensaje2, G, n, dA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carol, está eenvidiosa con ambos porque ella también quiere ver al gatito. Intercepta el mensaje enviado por Alice y lo cambia por otro y se lo envía a Bob haciéndose pasar por Alice. Bob cuando descifra el mensaje obtiene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -172,13 +210,21 @@
        "False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "verificarFirmaEC(mensaje2, G, n, HA, r, s)"
+    "mensajeDescifrado2 = \"Me ha surgido un problema, no puedes venir al final\"\n",
+    "verificarFirmaEC(mensajeDescifrado2, G, n, HA, r2, s2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bob ve que el mensaje no lo ha enviado Alice por lo que no le da credibilidad al mismo"
    ]
   },
   {
